# notko

./: .gitignore  Cargo.toml  README.md
notko-build/: Cargo.toml  README.md
notko-build/src/: lib.rs
notko-macros/: Cargo.toml  README.md
notko-macros-core/: Cargo.toml  README.md
notko-macros-core/src/: discover.rs  lib.rs  parse.rs  tiers.rs
notko-macros-core/src/rewrite/: hot.rs  mod.rs  outcome.rs
notko-macros-core/tests/: extension.rs
notko-macros/notko-optimizers/: Trace.rs  trace.rs
notko-macros/src/: discover.rs  lib.rs  tiers.rs
notko-macros/src/rewrite/: helpers.rs  mod.rs
notko-macros/tests/: smoke.rs
research/: 2026_05_05_doc_audit.md  2026_05_05_doc_audit_round.md
src/: bounded.rs  cmp.rs  consttry.rs  consttry_const_path.rs  consttry_plain_path.rs  ctor.rs  ctor_const_path.rs  ctor_plain_path.rs  iter.rs  just.rs  just_consttry_const.rs  just_consttry_plain.rs  lib.rs  maybe.rs  maybe_consttry_const.rs  maybe_consttry_plain.rs  nonzero.rs  outcome.rs  outcome_consttry_const.rs  outcome_consttry_plain.rs  prelude.rs  slot.rs
tests/: bounded.rs  cmp_ext.rs  consttry_smoke.rs  ctor.rs  ctor_const_path.rs  ctor_plain_path.rs  iter_ext.rs  just_combinators.rs  maybe_combinators.rs  nonzero.rs  outcome_combinators.rs  slot_layout.rs  try_smoke.rs
