[package]
name = "notko"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "foundation primitives for the hilavitkutin stack: Just, Maybe, Outcome, Boundable, NonZeroable"
repository = "https://github.com/orgrinrt/notko"
readme = "README.md"
categories = ["no-std", "rust-patterns"]
keywords = ["no_std", "no_alloc", "primitives", "hilavitkutin"]

[lib]
name = "notko"
path = "src/lib.rs"

[features]
default = []
# Impl `core::ops::Try` for Just/Maybe/Outcome. Requires nightly.
try_trait_v2 = []

[dependencies]

[dev-dependencies]
