[package]
name = "notko-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "proc-macro attribute #[lower_by] for AST-rewriting between Hot/Warm/Cold fallibility tiers; used with notko's Just/Outcome primitives"
readme = "README.md"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["no_std", "no_alloc", "proc-macro", "hot-path", "hilavitkutin"]

[lib]
proc-macro = true

[features]
default = []
# Flip hot-tier rewrite from Outcome<T, E> to Just<T> + panic-on-Err.
# Enabled by a framework-consumer crate's own `internal` feature (convention).
internal = []

[dependencies]
notko-macros-core = { path = "../notko-macros-core", version = "0.1.0" }
proc-macro2 = "1"

[dev-dependencies]
notko = { path = "..", features = ["try_trait_v2"] }
